app/styles/custom.css
/* ... */
.hidemap{ position:absolute; left:15px; top:0px; z-index:1}
.hidemap .btn-info{border-radius:0px 0px 4px 0px}
.results{ 
	margin:10px auto;
	height: auto;
	width:100%;
	bottom: 0;
	top: 227px;
	min-height:300px;
}

.results .col-md-7,.results .col-md-pull-6{ padding-right:0;}
.results .col-md-5,.results .col-md-push-6{ padding-left:0;}
@media (max-width: 990px){	
.results .col-md-7{ padding-right:15px;}
.results .col-md-5{ padding-left:15px;}
.detail .col-md-6{ padding-left:15px; padding-right:15px;}
}
.list .scroll{max-height:325px; overflow-y:auto;}
.col-md-5 .list{ border-left:none;}
.list .filter{ margin-bottom:4px;}
.list .filter .btn-default{ background:none; border-left:none; border-radius:0px 4px 4px 0px}

.list-view { padding:10px 0px; border-bottom:1px solid #eaeaea;}
.list-view:hover{ background:#f9f9f9;}
.list-view .image {
	width: 91px;
	height: 107px;
	margin-right: 10px;
	float: left;
	position: relative;
	left: 15px;
 }
.list-view .image img{ width:100%; height:100%;}
.list-view .content{ margin-left:110px; overflow:hidden}
.list-view .content h3{ float:left; color:#1885f0; margin:0; font-size:21px;}

.list-view .dateright{text-align:right;}
/*.list-view .price{ float:right; color:#28b779; padding-right:0px;}*/

/* change the color of 234/sqft under price in results change the color:#444444;*/
.list-view .price{ float:right; color:#444444; padding-right:0px; text-align:right}
/* end */

.list-view .content .price h4{ float:none; color:#444444;font-family:arial; margin:0; }

/* price is in bold format, just remove the below font-weight:bold to font-weight:normal, it looks good */
.list-view .content .price h4 span{ font-weight:bold}
/* end */

.properresultssqftlabel{
	position: relative;
	top: -11px;
	height: 0px;
}

/* SQFT space reducing css */
.input-group-addon_custom {  padding: 6px 6px; }
.sqft .input-group.price .form-control{ width:35%;}
/* SQFT space reducing css end*/

.list-view .dateright{ float:right; color:#353535; }

/* increase the size of social media icons in results box main page adjust below padding: 2px 7px; or imply remove below total css and chk too */
.customsocial .btn-sm { padding: 2px 7px; }
/* end */


.list-view .content .price h5{ margin:0; padding-left:10px;font-family:arial}
.list-view .content .row{white-space: nowrap; width: 100%; float:left;}

/*.list-view .firstRow{ font-weight:bold; margin-top:5px;}*/

.list-view .firstRow{ margin-top:5px;}

.list-view .secondRow{ color:#797979; font-size:12px; margin-top:15px;}
.list-view .thirdRow{margin-top:7px;}
.list-view .content .btn-group{ margin-top:6px; visibility:hidden}
.list-view:hover .content .btn-group{ visibility:visible}

.details-view{ overflow:hidden; overflow-y:auto; min-height:222px;position: relative;}
#signin,#account,#contact,#feedback,#changeLocality,#registerPropertySuccessModal{ z-index:99999;}
#signin .modal-dialog,#account .modal-dialog{ width:500px;}
#signin .form-group,#account .form-group{margin-left:-5px; margin-right:-5px;}
#signin .modal-body,#account .modal-body{ margin-bottom:0; padding-bottom:0; border-bottom:none}
#signin .modal-header,#account .modal-header{ margin-bottom:0; padding-bottom:0; border-bottom:none}
#signin .modal-footer,#account .modal-footer{ margin-top:0; padding-top:0; border-top:none}
#signin .checkbox{ padding-top:0;}

.navbar .icon-facebook-sign{ color:#39F;}
.navbar .icon-google-plus-sign{ color:#C03;}

.big-img{box-shadow:0px 0px 2px rgba(0,0,0,0.4); height:250px; padding:5px; max-width:500px; margin:0 auto;}
.big-img img{width:100%; height:100%;}
.detail-images{ margin:10px;}
.detail-images ul{ text-align:center; width:100%; margin-top:10px;}
.detail-images li{ display:inline-block; width:40px; height:40px; margin:0px 2px;}
.detail-images li img{ width:100%; height:100%; cursor:pointer;}
/*.detail-view h3{ color:#159CEB; margin:10px 10px 0; } */
.detail-view{overflow: hidden;}
.detail-view h3{ color:#159CEB;  padding:5px 10px 0px; margin-top:10px;}
.detail-images i{ color:#39F;}
#headertabs .tabs{ margin:0px; padding-left:247px;}
.tabs{ margin:0px 0px;}
.tabs .nav>li>a{ padding-top:5px; padding-bottom:5px;}
.tab-content{ padding:5px 10px;}

/*.tab-content{ padding:20px;} */

.checkbox-inline label,.radio-inline label{ font-weight:normal}
.upload-img{ margin-top:5px;overflow: auto;height: 470px;}
.upload-img img{width:150px; height:150px;}
.navbar-btn{margin-bottom: 0px;
    margin-top: 0px; padding-top:9px !important;}



.navbar-inverse .navbar-nav > li > a  > span{
    color: #333333;
	text-shadow: 0 0 0 rgba(0, 0, 0, 0.25);
}	

.navbar-inverse .navbar-nav > li > a:hover  span {
    color: #ffffff;
	border-color:#333333;
}
.navbar-inverse .navbar-nav > li:last-child{padding-left;0px;}
.fa-facebook-square:before {
content: “\f082″;
font-family: FontAwesome;
color:#4862a3;
}

.fa-google-plus-square:before {
content: “\f0d4″;
font-family: FontAwesome;
color:#da4834;
}

.fa-facebook-square:hover{
    background-color:#ffffff;
}
.fa-google-plus-square:hover{ background-color:#ffffff;}

/* Buy Rent css start....*/
.switch-light span {
        color:#FFCC00; }
		.switch-light span span:last-child{
        color:#333333; }
		.switch-light input:checked ~ span span {
        color:#333333; }
		.switch-light input:checked ~ span span:last-child {
        color:#FFCC00; }

.switch-light .btn-success{
	background-image: -webkit-linear-gradient(bottom, #525252, #404040); 
	background-image: -moz-linear-gradient(bottom, #525252, #404040); 
	background-image: -o-linear-gradient(bottom, #525252, #404040);
	background-image: linear-gradient(to top, #525252, #404040); border-color:#000000;  color:#FFCC15 !important;
}
/* Buy Rent css End ....*/


/* covered uncovered gap */
.coveredun .radio-inline, .checkbox-inline {padding-left: 41px;}
/* end */

.selectsort{min-width:145px;}
.property-results-count-block {
	position: relative;
	top: -44px;
}
.maprow .searchresults{padding-left:0px;}
.maprow .mapresults{padding-right:0px;overflow-y: auto;}
/* ... */

